# iamacooker

./: .gitignore  README.md  main.py  pyproject.toml
app/: agent.py  pyproject.toml
howtocook-mcp/: README.md  README_EN.md  pyproject.toml
howtocook-mcp/app/: main.py
howtocook-mcp/app/data/: recipes.py
howtocook-mcp/app/tools/: get_all_recipes.py  get_recipes_by_category.py  recommend_meals.py  what_to_eat.py
howtocook-mcp/app/utils/: recipe_utils.py
howtocook-mcp/src/: app.py
howtocook-mcp/src/data/: recipes.py
iamacooker-agent/: pyproject.toml
iamacooker-agent/app/: main.py
iamacooker-agent/app/agent/: __init__.py  howtocook.py
iamacooker-agent/app/agent/mcp/: __init__.py  howtocook.py
iamacooker-agent/app/internal/: __init__.py  client.py  loggging.py
iamacooker-agent/app/route/: __init__.py  howtocook.py
