[project]
name = "iamacooker"
version = "0.1.0"
description = "A cooking assistant project with agent and MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.3.4",
    "openai-agents>=0.0.14",
    "types-cachetools>=5.5.0.20240820",
]

[tool.uv.workspace]
members = [
    "app",
    "howtocook-mcp"
]


[project.scripts]
start-mcp = "python -m howtocook-mcp.src.app"
start-agent = "python -m app.agent"
start-all = "uv run start-mcp & uv run start-agent"
